# sefaz-contingencia

./: LICENSE  README.md  config.py  contigencias.json  main.py  pyproject.toml
managers/: contigencias_manager.py
notifiers/: base.py  manager.py  notifier.py  notifier_discord.py  notifier_slack.py  notifier_telegram.py
parsers/: html_table_parser.py
services/: sefaz_checker.py
utils/: discord_utils.py
