[tool.poetry]
name = "sefaz-contigencia"
version = "0.1.0"
description = ""
authors = ["Marcos Arthur <marcosarthurcruz61@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.4.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
